# rr

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: create.rs  demo.rs
examples/operators/: all.rs  do_on_next.rs  find.rs  flat_map.rs  flatten.rs  map.rs  merge.rs  mod.rs  observe_on_new_thread.rs
src/: error.rs  lib.rs  overflow_strategy.rs  publisher.rs  subscriber.rs  subscription.rs  util.rs
src/operators/: all.rs  average.rs  buffer.rs  catch.rs  combine_latest.rs  compact.rs  concat.rs  contains.rs  count.rs  debounce.rs  default_if_empty.rs  delay.rs  distinct.rs  distinct_until_changed.rs  do_on_next.rs  element_at.rs  filter.rs  find.rs  first.rs  first_emitting.rs  flat_map.rs  flat_map_latest.rs  flatten.rs  ignore_elements.rs  last.rs  map.rs  max.rs  merge.rs  merge_with.rs  min.rs  mod.rs  pack.rs  partition.rs  pluck.rs  publish_on.rs  reduce.rs  reject.rs  retry.rs  runner.rs  scan.rs  (+18 more)
src/schedulers/: mod.rs  new_thread_scheduler.rs  scheduler.rs  schedulers.rs
tests/: tests.rs
tests/operations/: merge.rs  mod.rs  take.rs
